<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/show_messages_all"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_all"/>
    <item
        android:id="@+id/show_messages_gps_date"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_gps_date"/>
    <item
        android:id="@+id/show_messages_date"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_date"/>
    <item
        android:id="@+id/show_messages_gps"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_gps"/>

</menu>