<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Rl_date"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:isScrollContainer="true"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <TextView
        android:id="@+id/text_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_title" />

    <Button
        android:id="@+id/Date_Picker"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/text_title"
        android:layout_toLeftOf="@+id/Time_Picker"
        android:text="@string/pick_date" />

    <Button
        android:id="@id/Time_Picker"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/text_title"
        android:text="@string/pick_time" />

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/Time_Picker"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/dealer_button_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/separator"
        android:onClick="appChooser"
        android:text="@string/select_app" />

</RelativeLayout>